# Sanguine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
output/: Cargo.toml
output/src/: main.rs
output/src/work/: blocks.rs  lsys_1.rs  mod.rs  mush.rs  mushroom.rs  star.rs  star_burst.rs  star_burst_comp.rs  test_circloid.rs  tester.rs  veranator.rs  voronated_star_burst.rs  voronoi.rs  voronoi_circloid.rs  voronoi_simple.rs
output/src/work/star_burst_lib/: draw.rs  draw_voronoi.rs  grid_comp.rs  lines.rs  mod.rs  threeways.rs  voronoi_comp.rs
sanguine_lib/: Cargo.toml
sanguine_lib/src/resources/: border_coordinates.rs  composition.rs  errors.rs  exclusion.rs  layout.rs  mod.rs  random_numbers.rs  shapes.rs
sanguine_lib/src/resources/border_coordinates/: all.rs  cell_border.rs  mod.rs  one_side.rs
sanguine_lib/src/resources/composition/: grid.rs  mod.rs  voronoi.rs
sanguine_lib/src/resources/layout/: grid.rs  mod.rs  voronoi.rs
sanguine_lib/src/resources/lsystems/: mod.rs
sanguine_lib/src/resources/shapes/: circle.rs  circloid.rs  curve.rs  ellipse.rs  line.rs  mod.rs  point.rs
src/: main.rs
src/lib/: layout.rs  math.rs  mod.rs  random_numbers.rs  shapes.rs
