[package]
name = "output"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.2"
svg = "0.14.0"
sanguine_lib = { path = "../sanguine_lib" }
voronator = "0.2.1"
chrono = "0.4.31"
lsystem = "0.2.1"


